--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,14 @@
 sonar.projectKey=LectureDemo_SonarQube
 sonar.projectName=untitled2
 sonar.projectVersion=1.0
+
 sonar.sources=src
 sonar.java.binaries=target/classes
-sonar,java.libraries=target/classes
+
 sonar.host.url=http://localhost:9000
-sonar.login=sqa_01cd847d3e1b2a091ff5a52eb8af9ac99e974b83
+sonar.token=sqa_01cd847d3e1b2a091ff5a52eb8af9ac99e974b83
+
+sonar.java.coveragePlugin=jacoco
+sonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml
+
+sonar.java.libraries=target/classes
